test/valid/tcomp000-scope-leave/tcomp000-scope-leave.agu
-- tcomp000, Vasco T. Vasconcelos
let main (_) : Unit -> Unit =
  let x : Int = 5 ;
  (let x : Bool = true ; 6) ;
  print(x)
